# abbey-onboarding

./: README.md  package-lock.json  package.json
backend/: .gitignore  .sample-env  README.md  db.sqlite3  pyproject.toml
backend/apps/accounts/: email.py  serializers.py  urls.py  views.py
backend/apps/accounts/management/commands/: createadmin.py
backend/apps/accounts/templates/email/: invite.html
backend/apps/core/: filters.py  models.py  roles.py  validators.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/doc/: urls.py  views.py
backend/apps/doc/static/doc/: home.md
backend/apps/doc/templates/doc/: markdown.html
backend/apps/doc/templates/rest_framework/: api.html  login.html
backend/apps/posts/: models.py  serializers.py  urls.py  views.py
backend/apps/posts/migrations/: 0001_initial.py
backend/backend/: models.py  serializers.py  settings.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.css  App.js  index.css
src/auth-server/: app.js
src/components/: map.js  note.css  noteapp.js  search-bar.js
src/data/: auth.js  dataProvider.js  parks.json
src/pages/: home.js  homemap.js  login.js  main-page.js  map.js  oldlogin.txt  oldreg.txt  references  register.js
